infra/yamls/01namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: ENV_NAME
  labels:
    name: ENV_NAME
---
