infra/yamls/05ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: CI_PROJECT_NAME-ingress
  namespace: ENV_NAME
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: ENDPOINT 
    http:
      paths:
      - path: /
        backend:
          serviceName: CI_PROJECT_NAME
          servicePort: APP_PORT
---
